--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,22 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <%= link_to 'Restaurants', restaurants_path, class: 'nav-item nav-link' %>
+          <% if user_signed_in? %>
+            <%= link_to 'Sign Out', destroy_user_session_path, class: 'nav-item nav-link', method: :delete %>
+          <% else %>
+            <%= link_to 'Sign In', new_user_session_path, class: 'nav-item nav-link' %>
+          <% end %>
+        </div>
+      </div>
+    </nav>
     <%= yield %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
