--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,10 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <%= link_to 'Restaurants', restaurants_path, class: 'nav-item nav-link' %>
+          <%= link_to 'Items', items_path, class: 'nav-item nav-link' %>
           <% if user_signed_in? %>
             <%= link_to 'Sign Out', destroy_user_session_path, class: 'nav-item nav-link', method: :delete %>
+            <%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-item nav-link' %>
           <% else %>
             <%= link_to 'Sign In', new_user_session_path, class: 'nav-item nav-link' %>
           <% end %>
