Fixed minor issues
* ApplicationController: added rescue_from exceptions for 404 and 401
* ItemsController: removed rescue exception code
* RestaurantsController: removed rescue exception code
* Views: added views for not found and unauthorized statuses
* Restaurant: Added unique model validation and association with item
* User: Added model level validations
* Others: Removed redundant views of not_found and unauthorized

--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -7,5 +7,8 @@
   <%= link_to 'Destroy', restaurant, method: :delete, 'data-turbolinks-action': 'replace' %>
 </p>
 <% unless enable_show %>
+  <strong>Items Available in this Restaurant</strong>
+  <%= render restaurant.items, enable_show: true %>
+  <%= link_to 'Add Item', new_restaurant_item_path(restaurant), 'data-turbolinks-action': 'replace' %>
   <%= link_to 'Back', restaurants_path, 'data-turbolinks-action': 'replace' %>
 <% end %>
