--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -3,9 +3,9 @@
 <p><strong>Price: </strong><%= item.price %></p>
 <p><strong>Restaurant: </strong><%= item.restaurant.name %></p>
 <p>
-  <%= link_to 'Edit', edit_item_path(item), 'data-turbolinks-action': 'replace' %>
+  <%= link_to 'Edit', edit_item_path(item) %>
   <% if enable_show %>
-    <%= link_to 'Show', item_path(item), 'data-turbolinks-action': 'replace' %>
+    <%= link_to 'Show', item_path(item) %>
   <% end %>
-  <%= link_to 'Destroy', item, method: :delete, 'data-turbolinks-action': 'replace' %>
+  <%= link_to 'Destroy', item, method: :delete %>
 </p>
