--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -1,14 +1,14 @@
 <p><strong>Name: </strong><%= restaurant.name %></p>
 <p>
-  <%= link_to 'Edit', edit_restaurant_path(restaurant), 'data-turbolinks-action': 'replace' %>
+  <%= link_to 'Edit', edit_restaurant_path(restaurant) %>
   <% if enable_show %>
-    <%= link_to 'Show', restaurant_path(restaurant), 'data-turbolinks-action': 'replace' %>
+    <%= link_to 'Show', restaurant_path(restaurant) %>
   <% end %>
-  <%= link_to 'Destroy', restaurant, method: :delete, 'data-turbolinks-action': 'replace' %>
+  <%= link_to 'Destroy', restaurant, method: :delete %>
 </p>
 <% unless enable_show %>
   <strong>Items Available in this Restaurant</strong>
-  <%= render restaurant.items, enable_show: true %>
-  <%= link_to 'Add Item', new_restaurant_item_path(restaurant), 'data-turbolinks-action': 'replace' %>
-  <%= link_to 'Back', restaurants_path, 'data-turbolinks-action': 'replace' %>
+  <%= render 'items/list', items: restaurant.items %>
+  <%= link_to 'Add Item', new_restaurant_item_path(restaurant) %>
+  <%= link_to 'Back', restaurants_path %>
 <% end %>
