--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,4 +2,4 @@
 
 <%= render @restaurants, enable_show: true%>
 
-<%= link_to 'Add Restaurant', new_restaurant_path, 'data-turbolinks-action': 'replace' %>
+<%= link_to 'Add Restaurant', new_restaurant_path %>
