--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,3 +1,3 @@
-<strong>Update Item</strong>
+<strong>Update Item for <%= @item.restaurant.name %> </strong>
 <br/><br/>
-<%= render 'form', item: @item %>
+<%= render 'form', restaurant: nil, item: @item %>
