--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,3 +1,3 @@
-<strong>Create a New Item</strong>
+<strong>Add a New Item for <%= @restaurant.name %> </strong>
 <br/><br/>
-<%= render 'form', item: @item%>
+<%= render 'form', restaurant: @restaurant, item: @item %>
