--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,2 @@
 <strong>Restaurant View</strong>
-<%= render 'restaurant', enable_show: false, restaurant: @restaurant%>
+<%= render @restaurant, enable_show: false%>
