Requested Changes Done
* Views: replaced popular_items with index
* Item Form: replaced string with symbol

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -20,7 +20,7 @@
   </p>
   <p>
     <%= form.label :price %>
-    <%= form.number_field :price, step: 'any', min: 0 %>
+    <%= form.number_field :price, step: :any, min: 0 %>
   </p>
   <p>
     <%= form.submit %>
