--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -20,5 +20,5 @@
     <%= render order.line_items %>
   </div>
 <% else %>
-  <%= link_to 'View Order', order_path(order) %>
+  <%= link_to 'View Order', order %>
 <% end %>
