--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,15 +1,5 @@
+<%= render 'devise/shared/error_messages', resource: item%>
 <%= form_for [restaurant, item], local: true do |form| %>
-  <% if item.errors.any?%>
-    <div id='error_explanation'>
-      <strong><%= pluralize(item.errors.count, 'error') %> prohibited this item from being saved</strong>
-    </div>
-
-    <ul>
-    <% item.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  <% end %>
   <p>
     <%= form.label :title %>
     <%= form.text_field :title %>
@@ -21,6 +11,10 @@
   <p>
     <%= form.label :price %>
     <%= form.number_field :price, step: :any, min: 0 %>
+  </p>
+  <p>
+    <%= form.label :categories %>
+    <%= form.collection_check_boxes :category_ids, Category.order(:name), :id, :name %>
   </p>
   <p>
     <%= form.submit %>
