--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
       <div class='collapse navbar-collapse' id='navbarNavAltMarkup'>
         <div class='navbar-nav'>
           <%= link_to 'Restaurants', restaurants_path, class: 'nav-item nav-link' %>
+          <%= link_to 'Categories', categories_path, class: 'nav-item nav-link' %>
           <% unless current_user&.admin?%>
             <%= link_to 'Popular Items', items_path, class: 'nav-item nav-link' %>
             <%= link_to cart_path, class: 'nav-item nav-link' do %>
