--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,15 +1,5 @@
+<%= render 'devise/shared/error_messages', resource: restaurant%>
 <%= form_for restaurant, local: true do |form| %>
-  <% if restaurant.errors.any?%>
-    <div id='error_explanation'>
-      <strong><%= pluralize(restaurant.errors.count, 'error') %> prohibited this restaurant from being saved</strong>
-    </div>
-
-    <ul>
-    <% restaurant.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  <% end %>
   <p>
     <%= form.label :name %>
     <%= form.text_field :name %>
