Photo Upload Feature Done
* ActiveStorage: migrations added and ran
* Google Cloud: added configuration in storage.yml
* Gemfile: gem added for google cloud storage use
* Minor rubocop errors resolved
* Views: updated views of items for photos
* Models: added photo attachment in Item

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,10 @@
 <%= render 'devise/shared/error_messages', resource: item%>
 <%= form_for [restaurant, item], local: true do |form| %>
+  <%= form.label :photo %>
+  <p>
+    <%= image_tag 'item_blank_photo.png', id: :form_photo_thumbnail, width: 200 %>
+  </p>
+  <%= form.file_field :photo, direct_upload: true, :accept => 'image/*' %>
   <p>
     <%= form.label :title %>
     <%= form.text_field :title %>
