--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,30 +1,46 @@
-<p><strong>Title: </strong><%= item.title %></p>
-<% if item.photo.attached? %>
-  <%= image_tag url_for(item.photo), width: 200 %>
-<% else %>
-  <%= image_tag 'item_blank_photo.png', width: 200 %>
-<% end %>
-<p><strong>Description: </strong><%= item.description %></p>
-<p><strong>Price: </strong><%= item.price %></p>
-<p><strong>Restaurant: </strong><%= item.restaurant.name %></p>
-<p>
-  <%= link_to 'Edit', edit_item_path(item) %>
-  <% if defined?(enable_show) && enable_show %>
-    <%= link_to 'Show', item_path(item) %>
-  <% else %>
-    <strong>Categories: </strong>
-    <ul><%= render item.categories %></ul>
-  <% end %>
-  <% unless current_user&.admin? %>
-    <%= link_to 'Add to Cart', add_to_cart_link(item), method: :post, remote: true %>
-  <% end %>
-  <% if defined?(inside_category) && inside_category %>
-    <%= link_to 'Remove from Category', category_remove_item_path(category, item)%>
-  <% end %>
-  <%= link_to 'Destroy', item, method: :delete %>
-  <% if item.not_retired? %>
-    <%= link_to 'Retire', item_update_status_path(item_id: item.id, status: :retired) %>
-  <% elsif item.retired? %>
-    <%= link_to 'Resume', item_update_status_path(item_id: item.id, status: :not_retired) %>
-  <% end %>
-</p>
+<div class= 'col-md-4'>
+  <div class="card mb-4 shadow-sm">
+    <%= link_to item_path(item) do %>
+      <div class="item-image-container bd-placeholder-img card-img-top text-center bg-dark">
+        <% if item.photo.attached? %>
+          <%= image_tag url_for(item.photo) %>
+        <% else %>
+          <%= image_tag 'item_blank_photo.png' %>
+        <% end %>
+      </div>
+    <% end %>
+    <div class="card-body">
+      <div class="h2"><%= item.title.humanize %></div>
+      <% if !defined?(order) || (defined?(order) && (policy(order).add_line_item? || policy(order).add_line_item?)) %>
+        <% if (!defined?(added_to_cart) || !added_to_cart) && (current_user.nil? || current_user.purchaser?) %>
+          <% unless current_user&.admin? %>
+            <%= add_to_cart_link 'Add to Cart', item %>
+          <% end %>
+          <%= link_to add_to_cart_link(item), method: :post, remote: true, class: 'btn btn-sm btn-outline-success' do %>
+            <i class="bi bi-bag-plus-fill"></i> Add to Cart
+          <% end %>
+        <% end %>
+        <% if defined?(inside_category) && inside_category %>
+          <%= link_to 'Remove from Category', category_remove_item_path(category, item), class: 'btn btn-sm btn-outline-danger' %>
+        <% end %>
+      <% end %>
+      <p class="card-text"><strong>Description: </strong><%= item.description.humanize %></p>
+      <p><strong>Price: </strong><%= item.price %></p>
+      <p><strong>Restaurant: </strong><%= item.restaurant.name.humanize %></p>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="btn-group">
+          <% if policy(item).edit? || policy(item).destroy? || policy(item).update_status? %>
+            <%= link_to 'Destroy', item, method: :delete, class: 'btn btn-sm btn-outline-danger' %>
+            <% if item.not_retired? %>
+              <%= link_to 'Retire', item_update_status_path(item_id: item.id, status: :retired), class: 'btn btn-sm btn-outline-dark' %>
+            <% elsif item.retired? %>
+              <%= link_to 'Resume', item_update_status_path(item_id: item.id, status: :not_retired), class: 'btn btn-sm btn-outline-dark' %>
+            <% end %>
+            <%= link_to 'Edit', edit_item_path(item), class: 'btn btn-sm btn-outline-secondary' %>
+          <% end %>
+        </div>
+      </div>
+      <small class="text-muted d-block text-right"><%= time_ago_in_words(item.created_at)%> ago</small>
+    </div>
+  </div>
+</div>
