Updated restaurant views
Frontend: added and implemented bootstrap styles in restaurant views

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -5,8 +5,6 @@
     <%= form.text_field :name %>
   </p>
   <p>
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-dark' %>
   </p>
 <% end %>
-
-<%= link_to 'Back', restaurants_path %>
