--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -1,14 +1,19 @@
-<p><strong>Name: </strong><%= restaurant.name %></p>
-<p>
-  <%= link_to 'Edit', edit_restaurant_path(restaurant) %>
-  <% if enable_show %>
-    <%= link_to 'Show', restaurant_path(restaurant) %>
-  <% end %>
-  <%= link_to 'Destroy', restaurant, method: :delete %>
-</p>
+<div class="card">
+  <div class="card-body">
+    <h3 class="card-title"><%= restaurant.name %></h3>
+    <p><%= pluralize(restaurant.items.length, 'item')%></p>
+    <% if enable_show %>
+      <%= link_to 'Show', restaurant_path(restaurant), class:"btn btn-primary" %>
+    <% end %>
+    <% if user_signed_in? && current_user.admin? %>
+      <%= link_to 'Edit', edit_restaurant_path(restaurant), class: 'btn btn-outline-dark' %>
+      <%= link_to 'Destroy', restaurant, method: :delete, class:'btn btn-outline-danger' %>
+    <% end %>
+  </div>
+</div>
 <% unless enable_show %>
-  <strong>Items Available in this Restaurant</strong>
+  <h4>Items Available in this Restaurant</h4>
+  <%= link_to 'Add Item', new_restaurant_item_path(restaurant), class: 'btn btn-success' %>
+  <%= link_to 'Back', restaurants_path, class: 'btn btn-dark' %>
   <%= render 'items/list', items: restaurant.items %>
-  <%= link_to 'Add Item', new_restaurant_item_path(restaurant) %>
-  <%= link_to 'Back', restaurants_path %>
 <% end %>
