--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,7 +1,12 @@
-<h5><%= link_to category.name, category_items_path(category) %></h5>
-<% if policy(category).edit? && policy(category).destroy? %>
-  <p>
-    <%= link_to 'Edit', edit_category_path(category), class: 'btn btn-warning' %>
-    <%= link_to 'Destroy', category, method: :delete, class: 'btn btn-danger' %>
-  </p>
+<%= link_to category_items_path(category), class:'list-group-item list-group-item-action' do %>
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1"><%= category.name%></h5>
+    <small><%= time_ago_in_words(category.created_at)%> ago</small>
+  </div>
+  <p class="mb-1 badge badge-primary"><%= pluralize(category.items.length, 'Item')%></p>
+  <small>And some small print.</small>
+  <% if policy(category).edit? && policy(category).destroy? %>
+      <%= link_to 'Edit', edit_category_path(category), class: 'btn btn-warning' %>
+      <%= link_to 'Destroy', category, method: :delete, class: 'btn btn-danger' %>
+  <% end %>
 <% end %>
