--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,7 @@
 <h2>Browse Items by Categories</h2>
-<%= render @categories %>
 <% if policy(@categories).new? %>
-  <%= link_to 'Add Category', new_category_path, class: 'btn btn-success' %>
+  <%= link_to 'Add Category', new_category_path, class: 'btn btn-success mt-3' %>
 <% end %>
+<div class="list-group">
+  <%= render @categories %>
+</div>
