--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,8 +1,14 @@
-<strong>Orders</strong>
-<ul><%= link_to 'all', :orders %></ul>
-<% @statuses.each do |status| %>
-  <ul><%= link_to status, by_status_orders_path(order_status: status) %></ul>
+<% if @current_status == 'all' %>
+  <h2><%= @current_status.humanize%> Orders</h2>
+<% else %>
+  <h2>Orders with status "<%= @current_status.humanize%>"</h2>
 <% end %>
+<div class='mb-3'>
+  <h3 class='d-inline'><%= link_to 'All', :orders, class:"badge badge-dark px-3" %></h3>
+  <% @statuses.each do |status| %>
+    <h3 class='d-inline p-1'><%= link_to status.humanize, by_status_orders_path(order_status: status), class:"badge badge-dark px-3" %></h3>
+  <% end %>
+</div>
 <% if @orders.any? %>
   <%= render @orders, full_view: false %>
 <% else %>
