--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,2 +1,5 @@
-<p class='notice' id='flash_message'><%= flash[:notice] %></p>
-<p class='alert' id='flash_message'><%= flash[:alert] %></p>
+<% if flash[:notice] %>
+  <p class="alert alert-info notice" role="alert" id='flash_message'><%= flash[:notice] %></p>
+<% elsif flash[:alert] %>
+  <p class='alert alert-danger alert' role="info" id='flash_message'><%= flash[:alert] %></p>
+<% end %>
