--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,11 +14,35 @@
  *= require_self
  */
 @import 'bootstrap';
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
-.notice {
-  color: green;
+@mixin image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
 }
 
-.alert {
-  color: red;
+@mixin image-container($width, $height) {
+  width: $width;
+  height: $height;
+}
+
+.full-view-item-image-container {
+  @include image;
+  @include image-container(100%, 40rem);
+}
+.item-image-container {
+  @include image;
+  @include image-container(100%, 22rem);
+}
+.cart-item-image-container {
+  @include image;
+  @include image-container(20%, 100%);
+  float: right;
 }
