--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -2,7 +2,7 @@
 <p><strong>Placed By: </strong><%= order.user.full_name %></p>
 <p><strong>Restaurant: </strong><%= order.restaurant.name %></p>
 <p><strong>Status: </strong><%= order.status %></p>
-<p><strong>Submitted at: </strong><%= order.submitted_at %></p>
+<p><strong>Submitted at: </strong><%= order.created_at.localtime %></p>
 <% if order.ordered? %>
   <p><%= status_link_to 'Mark as Paid', :paid, order %></p>
   <p><%= status_link_to 'Cancel', :cancelled, order %></p>
@@ -10,14 +10,14 @@
   <p><%= status_link_to 'Mark as Completed', :completed, order %></p>
   <p><%= status_link_to 'Cancel', :cancelled, order %></p>
 <% elsif order.cancelled? %>
-  <p><strong>Cancelled at: </strong><%= order.updated_at %></p>
+  <p><strong>Cancelled at: </strong><%= order.updated_at.localtime %></p>
 <% elsif order.completed? %>
-  <p><strong>Completed at: </strong><%= order.updated_at %></p>
+  <p><strong>Completed at: </strong><%= order.updated_at.localtime %></p>
 <% end %>
 
 <% if full_view %>
-  <div id="order-line-items">
-    <%= render order.order_line_items %>
+  <div id='line-items'>
+    <%= render order.line_items %>
   </div>
 <% else %>
   <%= link_to 'View Order', order_path(order) %>
