--- a/app/views/items/_item_full_view.html.erb
+++ b/app/views/items/_item_full_view.html.erb
@@ -14,9 +14,9 @@
         <% if policy(item).edit? || policy(item).destroy? || policy(item).update_status? %>
           <%= link_to 'Destroy', item, method: :delete, class: 'btn btn-sm btn-outline-danger' %>
           <% if item.not_retired? %>
-            <%= link_to 'Retire', item_update_status_path(item_id: item.id, status: :retired), class: 'btn btn-sm btn-outline-dark' %>
+            <%= link_to 'Retire', item_update_status_path(item_id: item.id, status: :retired), class: 'btn btn-sm btn-outline-info' %>
           <% elsif item.retired? %>
-            <%= link_to 'Resume', item_update_status_path(item_id: item.id, status: :not_retired), class: 'btn btn-sm btn-outline-dark' %>
+            <%= link_to 'Resume', item_update_status_path(item_id: item.id, status: :not_retired), class: 'btn btn-sm btn-outline-success' %>
           <% end %>
           <%= link_to 'Edit', edit_item_path(item), class: 'btn btn-sm btn-outline-secondary' %>
         <% end %>
@@ -25,7 +25,7 @@
     <strong>Photo:</strong>
     <% if item.photo.attached?%>
       <div class="full-view-item-image-container bd-placeholder-img card-img-top text-center bg-dark">
-        <%= image_tag url_for(item.photo) %>
+        <%= image_tag url_for(item.photo), class: 'fit-image' %>
       </div>
     <% else %>
       <p>This item has no photo</p>
