--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,3 +1,2 @@
-<strong>Update Item for <%= @item.restaurant.name %> </strong>
-<br/><br/>
+<h2>Update Item for <%= @item.restaurant.name %> </h2>
 <%= render 'form', restaurant: nil, item: @item %>
