--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,34 +15,17 @@
  */
 @import 'bootstrap';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+@import 'items';
 
-@mixin image {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  img {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
+.card-overlay-link {
+  position:absolute;
+  left:0; top:0; bottom:0; right:0;
+}
+.card-inner-links-container {
+  position:relative;
+  pointer-events: none;
+  z-index: 1;
+  .card-inner-link {
+    pointer-events: all;
   }
-}
-
-@mixin image-container($width, $height) {
-  width: $width;
-  height: $height;
-}
-
-.full-view-item-image-container {
-  @include image;
-  @include image-container(100%, 40rem);
-}
-.item-image-container {
-  @include image;
-  @include image-container(100%, 22rem);
-}
-.cart-item-image-container {
-  @include image;
-  @include image-container(20%, 100%);
-  float: right;
 }
