--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,12 +1,16 @@
-<%= link_to category_items_path(category), class:'list-group-item list-group-item-action' do %>
+<div class = 'list-group-item list-group-item-action'>
+  <%= link_to '', category_items_path(category), class: 'card-overlay-link' %>
   <div class="d-flex w-100 justify-content-between">
     <h5 class="mb-1"><%= category.name%></h5>
     <small><%= time_ago_in_words(category.created_at)%> ago</small>
   </div>
-  <p class="mb-1 badge badge-primary"><%= pluralize(category.items.length, 'Item')%></p>
-  <small>And some small print.</small>
-  <% if policy(category).edit? && policy(category).destroy? %>
-      <%= link_to 'Edit', edit_category_path(category), class: 'btn btn-warning' %>
-      <%= link_to 'Destroy', category, method: :delete, class: 'btn btn-danger' %>
-  <% end %>
-<% end %>
+  <div class="card-inner-links-container">
+    <p class="mb-1 badge badge-primary"><%= pluralize(category.items.length, 'Item')%></p>
+    <div class="d-block">
+      <% if policy(category).edit? && policy(category).destroy? %>
+        <%= link_to 'Edit', edit_category_path(category), class: 'btn btn-outline-dark card-inner-link' %>
+        <%= link_to 'Destroy', category, method: :delete, class: 'btn btn-outline-danger card-inner-link' %>
+      <% end %>
+    </div>
+  </div>
+</div>
