--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,3 +1,3 @@
-<strong>Create a New Restaurant</strong>
+<h2>Create a New Restaurant</h2>
 <br/><br/>
 <%= render 'form', restaurant: @restaurant %>
