Updated js views for cart

--- a/app/views/session_carts/add_line_item.js.erb
+++ b/app/views/session_carts/add_line_item.js.erb
@@ -1,2 +1,2 @@
 $('#cart-items-count').html('<%= @cart.line_items.length %>');
-<%= render 'shared/flashes' %>
+<%= render 'shared/update_flashes' %>
