--- a/app/views/line_items/cart_update.js.erb
+++ b/app/views/line_items/cart_update.js.erb
@@ -1,3 +1,3 @@
 $('#cart-items-count').html('<%= @current_cart.line_items.length %>');
 $('#cart').html('<%= j render @current_cart %>')
-<%= render 'shared/flashes' %>
+<%= render 'shared/update_flashes' %>
