--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,2 +1,2 @@
 $('#cart-items-count').html('<%= @current_cart.line_items.length %>');
-<%= render 'shared/flashes' %>
+<%= render 'shared/update_flashes' %>
