--- a/app/views/session_carts/session_cart_update.js.erb
+++ b/app/views/session_carts/session_cart_update.js.erb
@@ -1,3 +1,3 @@
 $('#cart-items-count').html('<%= @cart.line_items.length %>');
 $('#cart').html('<%= j render @cart %>')
-<%= render 'shared/flashes' %>
+<%= render 'shared/update_flashes' %>
