Updates for Cart
* Policies added for carts and line items
* OrderPolicy updated
* Updated application helpers
* Added authorizations in respective controllers and views

--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,13 +1,12 @@
 <% if cart&.line_items&.any? %>
   <p><strong>Total Price: </strong><%= cart.total_price %></p>
-  <p><strong>Restaurant: </strong><%= cart.restaurant.name %></p>
   <div id="order-line-items">
-    <%= render cart.line_items.order(:created_at) %>
+    <%= render cart.line_items %>
   </div>
 <% else %>
   <%= 'Your cart is empty. Try adding some items to it.' %>
 <% end %>
 <% if cart&.line_items&.any? %>
-  <%= link_to 'Empty Cart', cart, method: :delete %>
+  <%= link_to 'Empty Cart', cart, method: :delete, class: 'btn btn-danger' %>
   <%= link_to 'Check Out', :checkout_orders, method: :post, class: 'btn btn-warning' %>
 <% end %>
