--- a/app/views/categories/category_items.html.erb
+++ b/app/views/categories/category_items.html.erb
@@ -3,8 +3,13 @@
 <% if user_signed_in? && current_user.admin? %>
   <strong>Add an Item to this Category</strong>
   <%= form_tag category_add_item_path do %>
-    <div class="form-group">
-      <%= collection_select :category, :item_ids, Item.order(:title), :id, :title, { include_blank: false }, { class:"form-control" } %>
+    <div class='form-group'>
+      <%= collection_select :category,
+                            :item_ids,
+                            Item.order(:title),
+                            :id, :title,
+                            { include_blank: false },
+                            { class:'form-control' } %>
     </div>
     <%= submit_tag 'Add item', class: 'btn btn-primary' %>
   <% end %>
@@ -12,7 +17,7 @@
 <% if @items.empty? %>
   <p>No items in this category</p>
 <% else %>
-  <div class="row">
+  <div class='row'>
     <%= render @items, enable_show: true, inside_category: true, category: @category %>
   </div>
 <% end %>
