--- a/app/views/categories/_badge.html.erb
+++ b/app/views/categories/_badge.html.erb
@@ -1,1 +1,3 @@
-<%= link_to category.name, category_items_path(category), class:"badge badge-pill badge-dark text-center" %>
+<%= link_to category.name,
+            category_items_path(category),
+            class:'badge badge-pill badge-dark text-center' %>
