--- a/app/views/items/_item_full_view.html.erb
+++ b/app/views/items/_item_full_view.html.erb
@@ -1,30 +1,38 @@
-<div class="card">
-  <div class="card-body">
+<div class='card'>
+  <div class='card-body'>
     <p>
       <strong>Categories: </strong>
-      <% item.categories.each do |category|%>
+      <% item.categories.each do |category| %>
         <%= render partial: 'categories/badge', locals: { category: category } %>
       <% end %>
     </p>
-    <p class="card-text"><strong>Description: </strong><%= item.description.humanize %></p>
-    <p class="card-text"><strong>Price: </strong><%= item.price %></p>
-    <p class="card-text"><strong>Restaurant: </strong><%= item.restaurant.name %></p>
-    <div class="d-flex justify-content-between align-items-center">
-      <div class="btn-group">
+    <p class='card-text'><strong>Description: </strong><%= item.description.humanize %></p>
+    <p class='card-text'><strong>Price: </strong><%= item.price %></p>
+    <p class='card-text'><strong>Restaurant: </strong><%= item.restaurant.name %></p>
+    <div class='d-flex justify-content-between align-items-center'>
+      <div class='btn-group'>
         <% if policy(item).edit? || policy(item).destroy? || policy(item).update_status? %>
-          <%= link_to 'Destroy', item, method: :delete, class: 'btn btn-sm btn-outline-danger' %>
+          <%= link_to 'Destroy', item,
+                      method: :delete,
+                      class: 'btn btn-sm btn-outline-danger' %>
           <% if item.not_retired? %>
-            <%= link_to 'Retire', item_update_status_path(item_id: item.id, status: :retired), class: 'btn btn-sm btn-outline-info' %>
+            <%= link_to 'Retire',
+                        item_update_status_path(item_id: item.id, status: :retired),
+                        class: 'btn btn-sm btn-outline-info' %>
           <% elsif item.retired? %>
-            <%= link_to 'Resume', item_update_status_path(item_id: item.id, status: :not_retired), class: 'btn btn-sm btn-outline-success' %>
+            <%= link_to 'Resume',
+                        item_update_status_path(item_id: item.id, status: :not_retired),
+                        class: 'btn btn-sm btn-outline-success' %>
           <% end %>
-          <%= link_to 'Edit', edit_item_path(item), class: 'btn btn-sm btn-outline-secondary' %>
+          <%= link_to 'Edit',
+                      edit_item_path(item),
+                      class: 'btn btn-sm btn-outline-secondary' %>
         <% end %>
       </div>
     </div>
     <strong>Photo:</strong>
-    <% if item.photo.attached?%>
-      <div class="full-view-item-image-container bd-placeholder-img card-img-top text-center bg-dark">
+    <% if item.photo.attached? %>
+      <div class='full-image-container bd-placeholder-img card-img-top text-center bg-dark'>
         <%= image_tag url_for(item.photo), class: 'fit-image' %>
       </div>
     <% else %>
