--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -1,6 +1,6 @@
-<div class="card mb-2">
-  <div class="card-body">
-    <h3 class="card-title"><%= order.restaurant.name %></h3>
+<div class='card mb-2'>
+  <div class='card-body'>
+    <h3 class='card-title'><%= order.restaurant.name %></h3>
     <p><strong>Total Price: </strong><%= order.total_price %></p>
     <p><strong>Placed By: </strong><%= order.user.full_name %></p>
     <p><strong>Restaurant: </strong><%= order.restaurant.name %></p>
@@ -8,11 +8,19 @@
 <p><strong>Submitted at: </strong><%= order.created_at.localtime %></p>
     <% if policy(order).update? %>
       <% if order.ordered? %>
-        <p><%= link_to 'Mark as Paid', update_status_link(:paid, order), method: :patch, class: 'btn btn-outline-primary' %></p>
-        <p><%= link_to 'Cancel', update_status_link(:cancelled, order), method: :patch, class: 'btn btn-outline-danger' %></p>
+        <p><%= link_to 'Mark as Paid',
+                        update_status_link(:paid, order),
+                        method: :patch, class: 'btn btn-outline-primary' %></p>
+        <p><%= link_to 'Cancel',
+                        update_status_link(:cancelled, order),
+                        method: :patch, class: 'btn btn-outline-danger' %></p>
       <% elsif order.paid? %>
-        <p><%= link_to 'Mark as Completed', update_status_link(:completed, order), method: :patch, class: 'btn btn-outline-success' %></p>
-        <p><%= link_to 'Cancel', update_status_link(:cancelled, order), method: :patch, class: 'btn btn-outline-danger' %></p>
+        <p><%= link_to 'Mark as Completed',
+                        update_status_link(:completed, order),
+                        method: :patch, class: 'btn btn-outline-success' %></p>
+        <p><%= link_to 'Cancel',
+                        update_status_link(:cancelled, order),
+                        method: :patch, class: 'btn btn-outline-danger' %></p>
       <% end %>
     <% end %>
     <% if order.cancelled? %>
@@ -22,7 +30,7 @@
     <% end %>
     <% if full_view %>
       <h2><%= pluralize(order.line_items.length, 'Item') %> in this order</h2>
-      <div id="order-line-items">
+      <div id='order-line-items'>
         <%= render order.line_items, read_only: true %>
       </div>
     <% else %>
