--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,12 +1,18 @@
-<% if @current_status == 'all' %>
-  <h2><%= @current_status.humanize%> Orders</h2>
+<% if @current_status == :all %>
+  <h2><%= @current_status.to_s.humanize %> Orders</h2>
 <% else %>
-  <h2>Orders with status "<%= @current_status.humanize%>"</h2>
+  <h2>Orders with status '<%= @current_status.to_s.humanize %>'</h2>
 <% end %>
 <div class='mb-3'>
-  <h3 class='d-inline'><%= link_to 'All', :orders, class:"badge badge-dark px-3" %></h3>
-  <% @statuses.each do |status| %>
-    <h3 class='d-inline p-1'><%= link_to status.humanize, by_status_orders_path(order_status: status), class:"badge badge-dark px-3" %></h3>
+  <h3 class='d-inline'>
+    <%= link_to 'All', :orders, class: 'badge badge-dark px-3' %>
+  </h3>
+  <% all_order_statuses.each do |status| %>
+    <h3 class='d-inline p-1'>
+      <%= link_to status.humanize,
+                  by_status_orders_path(order_status: status),
+                  class: 'badge badge-dark px-3' %>
+    </h3>
   <% end %>
 </div>
 <% if @orders.any? %>
