--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -1,12 +1,16 @@
-<div class="card  list-group-item-action">
-  <%= link_to '', restaurant_path(restaurant), class:"card-overlay-link" %>
-  <div class="card-body">
-    <h3 class="card-title"><%= restaurant.name %></h3>
-    <p><%= pluralize(restaurant.items.length, 'item')%></p>
-    <div class="card-inner-links-container">
+<div class='card  list-group-item-action'>
+  <%= link_to '', restaurant_path(restaurant), class: 'card-overlay-link' %>
+  <div class='card-body'>
+    <h3 class='card-title'><%= restaurant.name %></h3>
+    <p><%= pluralize(restaurant.items.length, 'item') %></p>
+    <div class='card-inner-links-container'>
       <% if user_signed_in? && current_user.admin? %>
-        <%= link_to 'Edit', edit_restaurant_path(restaurant), class: 'btn btn-outline-dark card-inner-link' %>
-        <%= link_to 'Destroy', restaurant, method: :delete, class:'btn btn-outline-danger card-inner-link' %>
+        <%= link_to 'Edit',
+                    edit_restaurant_path(restaurant),
+                    class: 'btn btn-outline-dark card-inner-link' %>
+        <%= link_to 'Destroy',
+                    restaurant, method: :delete,
+                    class: 'btn btn-outline-danger card-inner-link' %>
       <% end %>
     </div>
   </div>
