--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:notice] %>
-  <p class="alert alert-info notice" role="alert" id='flash_message'><%= flash[:notice] %></p>
+  <p class='alert alert-info notice' role='alert' id='flash_message'><%= flash[:notice] %></p>
 <% elsif flash[:alert] %>
-  <p class='alert alert-danger alert' role="info" id='flash_message'><%= flash[:alert] %></p>
+  <p class='alert alert-danger alert' role='info' id='flash_message'><%= flash[:alert] %></p>
 <% end %>
