--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,4 +1,4 @@
-<% inside_category ||= false %>
+<% category_flag ||= false %>
 <div class= 'col-md-4'>
   <div class='card mb-4 shadow-sm bg-gray list-group-item-action'>
     <%= link_to '', item_path(item), class:'card-overlay-link' %>
@@ -22,7 +22,7 @@
           <i class='bi bi-bag-plus-fill'></i> Add to Cart
         <% end %>
       <% end %>
-      <% if inside_category && policy(item.categories).remove_item? %>
+      <% if category_flag && policy(item.categories).remove_item? %>
         <%= link_to 'Remove from Category',
                     category_remove_item_path(category, item),
                     class: 'btn btn-sm btn-outline-secondary card-inner-link' %>
