--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -8,7 +8,7 @@
       <%= image_tag 'item_blank_photo.png', id: :form_photo_thumbnail, width: 200 %>
     <% end %>
   </p>
-  <%= form.file_field :photo, :accept => 'image/*' %>
+  <%= form.file_field :photo, accept: 'image/*' %>
   <p>
     <%= form.label :title %>
     <%= form.text_field :title %>
