--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -2,7 +2,7 @@
 <%= form_for restaurant, local: true do |form| %>
   <p>
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, required: true %>
   </p>
   <p>
     <%= form.submit class: 'btn btn-dark' %>
