--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -3,7 +3,7 @@
 <%= form_for category, local: true do |form| %>
   <p>
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, required: true %>
   </p>
   <p>
     <%= form.submit class: 'btn btn-dark' %>
