--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -1,3 +1,4 @@
+<% full_view_flag ||= false %>
 <div class='card  list-group-item-action'>
   <%= link_to '', restaurant_path(restaurant), class: 'card-overlay-link' %>
   <div class='card-body'>
@@ -15,9 +16,11 @@
     </div>
   </div>
 </div>
-<% unless enable_show %>
+<% unless full_view_flag %>
   <h4>Items Available in this Restaurant</h4>
-  <%= link_to 'Add Item', new_restaurant_item_path(restaurant), class: 'btn btn-success' %>
+  <% if policy(Item).new? %>
+    <%= link_to 'Add Item', new_restaurant_item_path(restaurant), class: 'btn btn-success' %>
+  <% end %>
   <%= link_to 'Back', restaurants_path, class: 'btn btn-dark' %>
   <%= render 'items/list', items: restaurant.items %>
 <% end %>
