removed br tags and minor fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
       </div>
     </nav>
     <div id='flash_messages'>
-      <%= render 'shared/flashes' %><br/>
+      <%= render 'shared/flashes' %>
     </div>
     <div class="container" id='main'>
       <%= yield %>
