--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,3 @@
-<strong>Restaurant View</strong>
-<%= render @restaurant, full_view_flag: false %>
+<h2>Restaurant View</h2>
+
+<%= render @restaurant, full_view_flag: true %>
