--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -10,7 +10,7 @@
   <% order_statuses.each do |status| %>
     <h3 class='d-inline p-1'>
       <%= link_to status.humanize,
-                  by_status_orders_path(order_status: status),
+                  orders_path(order_status: status),
                   class: 'badge badge-dark px-3' %>
     </h3>
   <% end %>
